--- a/index.html
+++ b/index.html
@@ -38,9 +38,54 @@ Group of Architects
 <img src="images/team4.png" alt="tow architects discussing about design">
       </div>
       <div class="our-features">
-        <h3 class="feature-title"><span class="text-light-gray" id="quick-list">Quick list</span> <span>of Our</span> <span class="text-primary">Features</span></h3>
+        <h3 class="section-title"><span class="text-light-gray" id="quick-list">Quick list</span> <span>of Our</span> <span class="text-primary">Features</span></h3>
         <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
         <button class="btn-primary">Explore More</button>
+      </div>
+    </section>
+
+    <section>
+      <div class="some-fact-info">
+<h3 class="section-title">Some Facts</h3>
+<p class="text-light-gray fact-discription">
+  There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+</p>
+</div>
+<div class="facts-container">
+  <div class="fact-card ">
+    <img src="images/icons/ribon.png" alt="">
+    <h4 class="fact-number ">54</h4>
+    <h5 class="fact-name text-light-gray">Awards Winnings</h5>
+  </div>
+  <div class="fact-card">
+    <img src="images/icons/email.png" alt="">
+    <h4 class="fact-number">1458</h4>
+    <h5 class="fact-name text-light-gray">Project Finished</h5>
+  </div>
+  <div class="fact-card">
+    <img src="images/icons/customers.png" alt="">
+    <h4 class="fact-number">590</h4>
+    <h5 class="fact-name text-light-gray">Clients Worked</h5>
+  </div>
+  <div class="fact-card">
+    <img src="images/icons/email.png" alt="">
+    <h4 class="fact-number">22578</h4>
+    <h5 class="fact-name text-light-gray">Email Send</h5>
+  </div>
+</div>
+    </section>
+
+    <section class="our-sponsors">
+      <div class="sponsor-info">
+        <h3 class="section-title">Our Sponsors</h3>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+      </div>
+      <div class="sponsors-company">
+        <img src="images/sponsors/amazon.png" alt="">
+        <img src="images/sponsors/figma.png" alt="">
+        <img src="images/sponsors/google.png" alt="">
+        <img src="images/sponsors/spotify.png" alt="">
+        <img src="images/sponsors/telerama.png" alt="">
       </div>
     </section>
   </main>
