--- a/index.html
+++ b/index.html
@@ -1,93 +1,177 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="/css/style.css">
-</head>
-<body class="work-sans-font">
-  <header class="bg-light">
-    <nav class="navbar display-flex">
-      <h3 class="brand">G3 Architects</h3>
-      <ul class="nav-links display-flex">
-        <li class="nav-item "><a href="" class="nav-link text-gray">Home</a></li>
-        <li class="nav-item "><a href="" class="nav-link text-gray">About</a></li>
-        <li class="nav-item "><a href="" class="nav-link text-gray">Contact Us</a></li>
-        <li class="nav-item "><a href="" class="nav-link text-gray">Log IN</a></li>
-      </ul>
-    </nav>
-    <div class="banner">
-      <div class="banner-container">
-      <h1 class="banner-title">Brand New 
-Group of Architects 
-</h1>
-<p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-<button class="btn-primary">Explore More</button>
-</div>
-<img src="images/banner.png" alt="" class="banner-img">
-    </div>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body class="work-sans-font">
+    <header class="bg-light">
+      <nav class="navbar display-flex">
+        <h3 class="brand">G3 Architects</h3>
+        <ul class="nav-links display-flex">
+          <li class="nav-item">
+            <a href="" class="nav-link text-gray">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-gray">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-gray">Contact Us</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link text-gray">Log IN</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="banner">
+        <div class="banner-container">
+          <h1 class="banner-title">Brand New Group of Architects</h1>
+          <p class="banner-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+        <img src="images/banner.png" alt="" class="banner-img" />
+      </div>
+    </header>
 
-  <main>
-    <section class="teams display-flex">
-      <div class="team-img-container">
-<img src="images/team1.png" alt="tow architects discussing about design">
-<img src="images/team2.png" alt="tow architects discussing about design">
-<img src="images/team3.png" alt="tow architects discussing about design">
-<img src="images/team4.png" alt="tow architects discussing about design">
-      </div>
-      <div class="our-features">
-        <h3 class="section-title"><span class="text-light-gray" id="quick-list">Quick list</span> <span>of Our</span> <span class="text-primary">Features</span></h3>
-        <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-        <button class="btn-primary">Explore More</button>
-      </div>
-    </section>
+    <main>
+      <section class="teams display-flex">
+        <div class="team-img-container">
+          <img
+            src="images/team1.png"
+            alt="tow architects discussing about design"
+          />
+          <img
+            src="images/team2.png"
+            alt="tow architects discussing about design"
+          />
+          <img
+            src="images/team3.png"
+            alt="tow architects discussing about design"
+          />
+          <img
+            src="images/team4.png"
+            alt="tow architects discussing about design"
+          />
+        </div>
+        <div class="our-features">
+          <h3 class="section-title">
+            <span class="text-light-gray" id="quick-list">Quick list</span>
+            <span>of Our</span> <span class="text-primary">Features</span>
+          </h3>
+          <p class="feature-description text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
 
-    <section>
-      <div class="some-fact-info">
-<h3 class="section-title">Some Facts</h3>
-<p class="text-light-gray fact-discription">
-  There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
-</p>
-</div>
-<div class="facts-container">
-  <div class="fact-card ">
-    <img src="images/icons/ribon.png" alt="">
-    <h4 class="fact-number ">54</h4>
-    <h5 class="fact-name text-light-gray">Awards Winnings</h5>
-  </div>
-  <div class="fact-card">
-    <img src="images/icons/email.png" alt="">
-    <h4 class="fact-number">1458</h4>
-    <h5 class="fact-name text-light-gray">Project Finished</h5>
-  </div>
-  <div class="fact-card">
-    <img src="images/icons/customers.png" alt="">
-    <h4 class="fact-number">590</h4>
-    <h5 class="fact-name text-light-gray">Clients Worked</h5>
-  </div>
-  <div class="fact-card">
-    <img src="images/icons/email.png" alt="">
-    <h4 class="fact-number">22578</h4>
-    <h5 class="fact-name text-light-gray">Email Send</h5>
-  </div>
-</div>
-    </section>
+      <section class="features display-flex">
+        <div>
+          <h3 class="section-title" id="feature-section-title">
+            Features you will <br />
+            love $ enjoy
+          </h3>
+          <p class="text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
 
-    <section class="our-sponsors">
-      <div class="sponsor-info">
-        <h3 class="section-title">Our Sponsors</h3>
-        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-      </div>
-      <div class="sponsors-company">
-        <img src="images/sponsors/amazon.png" alt="">
-        <img src="images/sponsors/figma.png" alt="">
-        <img src="images/sponsors/google.png" alt="">
-        <img src="images/sponsors/spotify.png" alt="">
-        <img src="images/sponsors/telerama.png" alt="">
-      </div>
-    </section>
-  </main>
-</body>
+          <div class="feature-card">
+            <h4 class="feature-title">Dexktop & Mobile Version</h4>
+            <p class="text-light-gray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="feature-card">
+            <h4 class="feature-title">Dexktop & Mobile Version</h4>
+            <p class="text-light-gray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="feature-card">
+            <h4 class="feature-title">Dexktop & Mobile Version</h4>
+            <p class="text-light-gray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+          <div class="feature-card">
+            <h4 class="feature-title">Dexktop & Mobile Version</h4>
+            <p class="text-light-gray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
+          </div>
+        </div>
+        <div class="featured-architect">
+          <img src="images/architect.png" alt="" />
+          <button class="btn-primary" id="experience-badge"><span id="experience-year">10+ Years</span> <br><span>Experience</span></button>
+        </div>
+      </section>
+
+      <section>
+        <div class="some-fact-info">
+          <h3 class="section-title">Some Facts</h3>
+          <p class="text-light-gray fact-discription">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="facts-container">
+          <div class="fact-card">
+            <img src="images/icons/ribon.png" alt="" />
+            <h4 class="fact-number">54</h4>
+            <h5 class="fact-name text-light-gray">Awards Winnings</h5>
+          </div>
+          <div class="fact-card">
+            <img src="images/icons/email.png" alt="" />
+            <h4 class="fact-number">1458</h4>
+            <h5 class="fact-name text-light-gray">Project Finished</h5>
+          </div>
+          <div class="fact-card">
+            <img src="images/icons/customers.png" alt="" />
+            <h4 class="fact-number">590</h4>
+            <h5 class="fact-name text-light-gray">Clients Worked</h5>
+          </div>
+          <div class="fact-card">
+            <img src="images/icons/email.png" alt="" />
+            <h4 class="fact-number">22578</h4>
+            <h5 class="fact-name text-light-gray">Email Send</h5>
+          </div>
+        </div>
+      </section>
+
+      <section class="our-sponsors">
+        <div class="sponsor-info">
+          <h3 class="section-title">Our Sponsors</h3>
+          <p class="text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="sponsors-company">
+          <img src="images/sponsors/amazon.png" alt="" />
+          <img src="images/sponsors/figma.png" alt="" />
+          <img src="images/sponsors/google.png" alt="" />
+          <img src="images/sponsors/spotify.png" alt="" />
+          <img src="images/sponsors/telerama.png" alt="" />
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
